fix(TransactionHeader): Properly align the date selector on mobile

--- a/src/ducks/transactions/TransactionsPage.styl
+++ b/src/ducks/transactions/TransactionsPage.styl
@@ -23,7 +23,7 @@
     margin-bottom -72px
 
     +small-screen()
-        margin-bottom -52px
+        margin-bottom -40px
 
-.TransactionsHeader__selectDates
+.TransactionsHeader__selectDatesContainer
     position relative
